--- a/_source/stylesheets/layout/_main.scss
+++ b/_source/stylesheets/layout/_main.scss
@@ -27,8 +27,7 @@
 main,
 [role='main'] {
 	clear: both;
-}
 
-main {
-	padding: span(1) 0;
+	margin-top: span(1);
+	margin-bottom: span(1);
 }
