--- a/_source/stylesheets/pages/_home.scss
+++ b/_source/stylesheets/pages/_home.scss
@@ -3,4 +3,9 @@
 // -----------------------------------------------------------------------------
 .home main {
 	padding-top: 0;
+	margin-top: 0;
+}
+
+.home .map-container {
+	margin-bottom: span(1);
 }
